<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.zarbosoft.pyxyzygy</groupId>
    <artifactId>app</artifactId>
    <version>0.0.0</version>

    <dependencies>
        <dependency>
            <groupId>com.zarbosoft.pyxyzygy</groupId>
            <artifactId>core</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.zarbosoft.pyxyzygy</groupId>
            <artifactId>nearestneighborimageviewagent</artifactId>
            <version>1.0.0</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>com.zarbosoft</groupId>
            <artifactId>pidgoon-command</artifactId>
            <version>0.0.7</version>
        </dependency>
        <dependency>
            <groupId>com.zarbosoft.pyxyzygy</groupId>
            <artifactId>nearestneighborimageview</artifactId>
            <version>1.0.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.squareup</groupId>
            <artifactId>gifencoder</artifactId>
            <version>0.9.1</version>
        </dependency>
        <dependency>
            <groupId>org.jcodec</groupId>
            <artifactId>jcodec</artifactId>
            <version>0.2.3</version>
        </dependency>
    </dependencies>
    <properties>
        <modulesOutput>${project.build.directory}/modules</modulesOutput>
        <imageOutput>##NOTSET##</imageOutput>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>1.7</version>
                <executions>
                    <execution>
                        <id>add-target-resources-dir</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>add-resource</goal>
                        </goals>
                        <configuration>
                            <resources>
                                <resource>
                                    <directory>${project.build.directory}/resources</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>1.9</source>
                    <target>1.9</target>
                    <compilerArgs>
                        <arg>--add-exports=javafx.graphics/com.sun.prism=com.zarbosoft.pyxyzygy.app</arg>
                        <arg>--add-exports=javafx.graphics/com.sun.javafx.sg.prism=com.zarbosoft.pyxyzygy.app</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <outputDirectory>${modulesOutput}</outputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.1</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${modulesOutput}</outputDirectory>
                            <includeScope>runtime</includeScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.moditect</groupId>
                <artifactId>moditect-maven-plugin</artifactId>
                <version>1.0.0.Beta2</version>
                <executions>
                    <execution>
                        <id>forcibly-java-9</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>add-module-info</goal>
                        </goals>
                        <configuration>
                            <overwriteExistingFiles>true</overwriteExistingFiles>
                            <outputDirectory>${modulesOutput}</outputDirectory>
                            <modules>
                                <module>
                                    <artifact>
                                        <groupId>com.google.guava</groupId>
                                        <artifactId>guava</artifactId>
                                        <version>27.0.1-jre</version>
                                    </artifact>
                                    <moduleInfo>
                                        <name>com.google.common</name>
                                        <requires>*;</requires>
                                    </moduleInfo>
                                </module>
                                <module>
                                    <artifact>
                                        <groupId>com.google.guava</groupId>
                                        <artifactId>failureaccess</artifactId>
                                        <version>1.0.1</version>
                                    </artifact>
                                    <moduleInfo>
                                        <name>com.google.failureaccess</name>
                                        <requires>*;</requires>
                                    </moduleInfo>
                                </module>
                                <module>
                                    <artifact>
                                        <groupId>org.openjfx</groupId>
                                        <artifactId>javafx-base</artifactId>
                                        <version>11.0.2</version>
                                    </artifact>
                                    <moduleInfo>
                                        <name>javafx.baseEmpty</name>
                                    </moduleInfo>
                                </module>
                                <module>
                                    <artifact>
                                        <groupId>org.openjfx</groupId>
                                        <artifactId>javafx-controls</artifactId>
                                        <version>11.0.2</version>
                                    </artifact>
                                    <moduleInfo>
                                        <name>javafx.controlsEmpty</name>
                                    </moduleInfo>
                                </module>
                                <module>
                                    <artifact>
                                        <groupId>org.openjfx</groupId>
                                        <artifactId>javafx-controls</artifactId>
                                        <version>11.0.2</version>
                                    </artifact>
                                    <moduleInfo>
                                        <name>javafx.controlsEmpty</name>
                                    </moduleInfo>
                                </module>
                                <module>
                                    <artifact>
                                        <groupId>org.pcollections</groupId>
                                        <artifactId>pcollections</artifactId>
                                        <version>2.1.2</version>
                                    </artifact>
                                    <moduleInfo>
                                        <name>pcollections</name>
                                        <requires>*;</requires>
                                    </moduleInfo>
                                </module>
                                <module>
                                    <artifact>
                                        <groupId>org.codehaus.mojo</groupId>
                                        <artifactId>animal-sniffer-annotations</artifactId>
                                        <version>1.17</version>
                                    </artifact>
                                    <moduleInfo>
                                        <name>animal.sniffer.annotations</name>
                                        <requires>*;</requires>
                                    </moduleInfo>
                                </module>
                                <module>
                                    <artifact>
                                        <groupId>com.google.code.findbugs</groupId>
                                        <artifactId>jsr305</artifactId>
                                        <version>3.0.2</version>
                                    </artifact>
                                    <moduleInfo>
                                        <name>jsr305</name>
                                        <requires>*;</requires>
                                    </moduleInfo>
                                </module>
                                <module>
                                    <artifact>
                                        <groupId>com.google.errorprone</groupId>
                                        <artifactId>error_prone_annotations</artifactId>
                                        <version>2.2.0</version>
                                    </artifact>
                                    <moduleInfo>
                                        <name>error.prone.annotations</name>
                                        <requires>*;</requires>
                                    </moduleInfo>
                                </module>
                                <module>
                                    <artifact>
                                        <groupId>org.checkerframework</groupId>
                                        <artifactId>checker-qual</artifactId>
                                        <version>2.5.2</version>
                                    </artifact>
                                    <moduleInfo>
                                        <name>checker.qual</name>
                                        <requires>*;</requires>
                                    </moduleInfo>
                                </module>
                                <module>
                                    <artifact>
                                        <groupId>com.google.j2objc</groupId>
                                        <artifactId>j2objc-annotations</artifactId>
                                        <version>1.1</version>
                                    </artifact>
                                    <moduleInfo>
                                        <name>j2objc.annotations</name>
                                        <requires>*;</requires>
                                    </moduleInfo>
                                </module>
                                <module>
                                    <artifact>
                                        <groupId>com.google.guava</groupId>
                                        <artifactId>listenablefuture</artifactId>
                                        <version>9999.0-empty-to-avoid-conflict-with-guava</version>
                                    </artifact>
                                    <moduleInfo>
                                        <name>listenablefuture</name>
                                        <requires>*;</requires>
                                    </moduleInfo>
                                </module>
                                <module>
                                    <artifact>
                                        <groupId>net.java.dev.jna</groupId>
                                        <artifactId>jna</artifactId>
                                        <version>5.2.0</version>
                                    </artifact>
                                    <moduleInfo>
                                        <name>com.sun.jna</name>
                                        <requires>*;</requires>
                                    </moduleInfo>
                                </module>
                                <module>
                                    <artifact>
                                        <groupId>net.java.dev.jna</groupId>
                                        <artifactId>jna-platform</artifactId>
                                        <version>5.2.0</version>
                                    </artifact>
                                    <moduleInfo>
                                        <name>com.sun.jna.platform</name>
                                        <exports>
                                            !com.sun.jna.platform.win32.COM.*;
                                            *;
                                        </exports>
                                        <requires>*;</requires>
                                    </moduleInfo>
                                </module>
                            </modules>
                        </configuration>
                    </execution>
                    <execution>
                        <id>create-runtime-image</id>
                        <phase>package</phase>
                        <goals>
                            <goal>create-runtime-image</goal>
                        </goals>
                        <configuration>
                            <modulePath>
                                <path>${modulesOutput}</path>
                            </modulePath>
                            <modules>
                                <module>com.zarbosoft.pyxyzygy.app</module>
                            </modules>
                            <baseJdk>version=11,vendor=openjdk</baseJdk>
                            <outputDirectory>${imageOutput}</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>